--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,6 @@
+{# https://tailwindcss.com/plus/ui-blocks/application-ui/application-shells/stacked#component-1b6c2fdf05472f8dcea7057074492fd6 #}
 <!DOCTYPE html>
-<html>
+<html class="h-full bg-gray-100 dark:bg-gray-900">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,67 +15,72 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body class="bg-white">
-        <header>
-            {# https://tailwindui.com/components/application-ui/navigation/navbars#component-b6bd4615a762a0d24780157803ad319e #}
+    <body class="h-full">
+        <div class="min-h-full">
             {% set route = app.request.attributes.get('_route') %}
             {% set navigation_entries = [{'route': 'index', 'label': 'Dashboard'}, {'route': 'route', 'label': 'Routes'}, {'route': 'setting' ,'label': 'Settings'}] %}
-            <nav class="border-b border-gray-900/10" x-data="{ open: false }">
-                <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-                    <div class="relative flex h-16 justify-between">
-                        <div class="inset-y-0 left-0 flex items-center sm:hidden">
+            <nav class="bg-primery-600 dark:bg-primery-800" x-data="{ open: false }">
+                <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+                    <div class="relative flex h-16 items-center justify-between">
+                        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                             {% block navigation_button %}
-                            <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primery-500" aria-controls="mobile-menu" @click="open = !open" x-bind:aria-expanded="open.toString()">
-                                <span class="absolute -inset-0.5"></span>
-                                <span class="sr-only">Open main menu</span>
-                                <svg x-description="Icon when menu is closed." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 block" :class="{ 'hidden': open, 'block': !(open) }" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                                </svg>
-                                <svg x-description="Icon when menu is open." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 hidden" :class="{ 'block': open, 'hidden': !(open) }" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-                                </svg>
-                            </button>
+                                <button @click="open = !open" x-bind:aria-expanded="open.toString()" type="button" class="relative inline-flex items-center justify-center rounded-md bg-primery-600 p-2 text-primery-200 hover:bg-primery-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-primery-800 dark:hover:bg-primery-700/75">
+                                    <span class="absolute -inset-0.5"></span>
+                                    <span class="sr-only">Open main menu</span>
+                                    <svg x-description="Icon when menu is closed." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 block" :class="{ 'hidden': open, 'block': !(open) }" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 in-aria-expanded:hidden">
+                                        <path d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                    <svg x-description="Icon when menu is open." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 hidden" :class="{ 'block': open, 'hidden': !(open) }" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 not-in-aria-expanded:hidden">
+                                        <path d="M6 18 18 6M6 6l12 12" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </button>
                             {% endblock %}
                         </div>
-                        <div class="ml-2.5 flex items-center overflow-auto sm:hidden">
-                            <h1 class="text-lg/6 font-semibold text-gray-900 text-nowrap overflow-hidden text-ellipsis">{% block navigation_title %}{% endblock %}</h1>
-                        </div>
-                        <div class="flex flex-1 items-center justify-start sm:items-stretch">
-                            <div class="hidden sm:flex sm:space-x-8">
-                                {% for entry in navigation_entries %}
-                                    {% if route starts with entry.route %}
-                                        <a href="{{ path(entry.route) }}" class="inline-flex items-center border-b-2 border-primery-500 px-1 pt-1 text-sm font-medium text-gray-900">{{ entry.label }}</a>
-                                    {% else %}
-                                        <a href="{{ path(entry.route) }}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">{{ entry.label }}</a>
-                                    {% endif %}
-                                {% endfor %}
+                        <div class="flex flex-1 items-center justify-center md:items-stretch md:justify-start">
+                            <div class="flex shrink-0 items-center">
+                                <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=fuchsia&shade=300" alt="Your Company" class="size-8" />
+                            </div>
+                            <div class="hidden md:block">
+                                <div class="ml-10 flex items-baseline space-x-4">
+                                    {% for entry in navigation_entries %}
+                                        {% if route starts with entry.route %}
+                                            <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-primery-700 px-3 py-2 text-sm font-medium text-white dark:bg-primery-950/40">{{ entry.label }}</a>
+                                        {% else %}
+                                            <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-primery-500/75 dark:hover:bg-primery-700/75">{{ entry.label }}</a>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
-                        <div class="inset-y-0 right-0 flex items-center pr-2 gap-x-4 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+                        <div class="absolute inset-y-0 right-0 flex items-center pr-2 gap-x-4 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
                             {% block navigation_buttons %}{% endblock %}
                         </div>
                     </div>
                 </div>
-
-                <!-- Mobile menu, show/hide based on menu state. -->
-                <div x-description="Mobile menu, show/hide based on menu state." class="sm:hidden" id="mobile-menu" x-show="open" x-cloak>
-                    <div class="space-y-1 pb-4 pt-2">
+                <div x-description="Mobile menu, show/hide based on menu state." x-show="open" x-cloak class="md:hidden">
+                    <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
                         {% for entry in navigation_entries %}
                             {% if route starts with entry.route %}
-                                <a href="{{ path(entry.route) }}" class="block border-l-4 border-primery-500 bg-primery-50 py-2 pl-3 pr-4 text-base font-medium text-primery-700">{{ entry.label }}</a>
+                                <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-primery-700 px-3 py-2 text-base font-medium text-white dark:bg-primery-950/40">{{ entry.label }}</a>
                             {% else %}
-                                <a href="{{ path(entry.route) }}" class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium text-gray-500 hover:border-gray-300 hover:bg-gray-50 hover:text-gray-700">{{ entry.label }}</a>
+                                <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-primery-500/75 dark:hover:bg-primery-700/75">{{ entry.label }}</a>
                             {% endif %}
                         {% endfor %}
                     </div>
                 </div>
             </nav>
-        </header>
-        <main>
-            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-                {% block main %}{% endblock %}
-            </div>
-            {% include 'component/flash.html.twig' %}
-        </main>
+
+            <header class="relative bg-white shadow-sm dark:bg-gray-800 dark:shadow-none dark:after:pointer-events-none dark:after:absolute dark:after:inset-x-0 dark:after:bottom-0 dark:after:h-px dark:after:bg-white/10">
+                <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 lg:px-8">
+                <h1 class="text-lg/6 font-semibold text-gray-900 dark:text-white">{% block navigation_title %}{% endblock %}</h1>
+                </div>
+            </header>
+            <main>
+                <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+                    {% block main %}{% endblock %}
+                </div>
+                {% include 'component/flash.html.twig' %}
+            </main>
+        </div>
     </body>
 </html>
