--- a/templates/button/angle.html.twig
+++ b/templates/button/angle.html.twig
@@ -1,3 +1,4 @@
+{# https://tailwindcss.com/plus/ui-blocks/application-ui/elements/dropdowns#component-f8a14da22f26a67757b19f2fe3ca00ed #}
 {% if is_adjustable %}
 <script>
     function initAngleButton()
@@ -12,16 +13,15 @@
     }
 </script>
 <div x-data="initAngleButton()" @click.away="angleMenuOpen = false">
-    <button @click="angleMenuOpen = !angleMenuOpen" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2">
+    <button @click="angleMenuOpen = !angleMenuOpen" class="relative rounded-full p-1 text-primery-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
         <span class="absolute -inset-1.5"></span>
         <span class="sr-only">Angle</span>
         <div class="size-6" x-text="angle + '°'"></div>
     </button>
-    <div x-show="angleMenuOpen" class="absolute right-0 z-10 mt-0.5 w-32 origin-top-right rounded-md bg-white py-2 shadow-lg ring-1 ring-gray-900/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="more-menu-button" tabindex="-1" x-cloak>
+    <div x-show="angleMenuOpen" class="absolute right-0 z-10 mt-0.5 w-32 origin-top-right rounded-md bg-white shadow-lg outline-1 outline-black/5 transition transition-discrete [--anchor-gap:--spacing(2)] data-closed:scale-95 data-closed:transform data-closed:opacity-0 data-enter:duration-100 data-enter:ease-out data-leave:duration-75 data-leave:ease-in dark:bg-gray-800 dark:shadow-none dark:-outline-offset-1 dark:outline-white/10" role="menu" aria-orientation="vertical" aria-labelledby="more-menu-button" tabindex="-1" x-cloak>
         {% for i in 0..14 %}
-            <a href="#" @click="changeAngle({{ i * 5 }}); angleMenuOpen = false; return false;" class="group flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 hover:outline-hidden" role="menuitem" tabindex="-1" id="menu-item-6">
-                <!-- Active: "text-gray-500", Not Active: "" -->
-                <span class="mr-3 size-5" :class="angle === {{ i * 5 }} ? 'text-gray-500' : 'text-gray-400'">{{ i * 5 }}</span>
+            <a href="#" @click="changeAngle({{ i * 5 }}); angleMenuOpen = false; return false;" class="block px-4 py-2 text-sm text-gray-700 focus:bg-gray-100 focus:text-gray-900 focus:outline-hidden dark:text-gray-300 dark:focus:bg-white/5 dark:focus:text-white" role="menuitem" tabindex="-1" id="menu-item-6">
+                <span class="mr-3 size-5">{{ i * 5 }}</span>
             </a>
         {% endfor %}
     </div>
