--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,23 +4,19 @@
 
 {% block main %}
 {% if route_count > 0 %}
-<div class="bg-white py-24 sm:py-32">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base/7 text-gray-600">Number of routes</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">{{ route_count }}</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base/7 text-gray-600">Easist route</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">{{ easiest.value }}</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base/7 text-gray-600">Hardest route</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">{{ hardest.value }}</dd>
-            </div>
-        </dl>
+<dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Number of routes</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ route_count }}</dd>
     </div>
-</div>
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Easist route</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ easiest.value }}</dd>
+    </div>
+    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Hardest route</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ hardest.value }}</dd>
+    </div>
+</dl>
 {% endif %}
 {% endblock %}
