--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
                     <div class="relative flex h-16 items-center justify-between">
                         <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
                             {% block navigation_button %}
-                                <button @click="open = !open" x-bind:aria-expanded="open.toString()" type="button" class="relative inline-flex items-center justify-center rounded-md bg-emerald-600 p-2 text-emerald-200 hover:bg-emerald-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-emerald-800 dark:hover:bg-emerald-700/75">
+                                <button type="button" command="--toggle" commandfor="mobile-menu" class="relative inline-flex items-center justify-center rounded-md bg-emerald-600 p-2 text-emerald-200 hover:bg-emerald-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-emerald-800 dark:hover:bg-emerald-700/75">
                                     <span class="absolute -inset-0.5"></span>
                                     <span class="sr-only">Open main menu</span>
                                     <svg x-description="Icon when menu is closed." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 block" :class="{ 'hidden': open, 'block': !(open) }" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 in-aria-expanded:hidden">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div x-description="Mobile menu, show/hide based on menu state." x-show="open" x-cloak class="md:hidden">
+                <el-disclosure id="mobile-menu" hidden class="block md:hidden">
                     <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
                         {% for entry in navigation_entries %}
                             {% if route starts with entry.route %}
@@ -110,7 +110,7 @@
                             </div>
                         {% endif %}
                     </div>
-                </div>
+                </el-disclosure>
             </nav>
 
             <header class="relative bg-white shadow-sm dark:bg-gray-800 dark:shadow-none dark:after:pointer-events-none dark:after:absolute dark:after:inset-x-0 dark:after:bottom-0 dark:after:h-px dark:after:bg-white/10">
