--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     <body class="h-full">
         <div class="min-h-full">
             {% set route = app.request.attributes.get('_route') %}
-            {% set navigation_entries = [{'route': 'index', 'label': 'Dashboard'}, {'route': 'route', 'label': 'Routes'}, {'route': 'setting' ,'label': 'Settings'}] %}
+            {% set navigation_entries = [{'route': 'index', 'label': 'Dashboard', 'userRequired': false}, {'route': 'route', 'label': 'Routes', 'userRequired': false}, {'route': 'setting' ,'label': 'Settings', 'userRequired': true}] %}
             <nav class="bg-emerald-600 dark:bg-emerald-800" x-data="{ open: false }">
                 <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                     <div class="relative flex h-16 items-center justify-between">
@@ -41,10 +41,12 @@
                             <div class="hidden md:block">
                                 <div class="flex items-baseline space-x-4">
                                     {% for entry in navigation_entries %}
-                                        {% if route starts with entry.route %}
-                                            <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-emerald-700 px-3 py-2 text-sm font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
-                                        {% else %}
-                                            <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
+                                        {% if entry.userRequired == false or app.user %}
+                                            {% if route starts with entry.route %}
+                                                <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-emerald-700 px-3 py-2 text-sm font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
+                                            {% else %}
+                                                <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
+                                            {% endif %}
                                         {% endif %}
                                     {% endfor %}
                                 </div>
@@ -82,10 +84,12 @@
                 <el-disclosure id="mobile-menu" hidden class="block md:hidden">
                     <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
                         {% for entry in navigation_entries %}
-                            {% if route starts with entry.route %}
-                                <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-emerald-700 px-3 py-2 text-base font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
-                            {% else %}
-                                <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
+                            {% if entry.userRequired == false or app.user %}
+                                {% if route starts with entry.route %}
+                                    <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-emerald-700 px-3 py-2 text-base font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
+                                {% else %}
+                                    <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
                     </div>
