--- a/templates/button/mirror.html.twig
+++ b/templates/button/mirror.html.twig
@@ -2,10 +2,13 @@
 <script>
     function initMirrorButton() {
         return {
-            isMirrored: false,
+            isMirrored: Alpine.$persist({}),
+            init() {
+                this.isMirrored[{{route_entity.id}}] = this.isMirrored[{{route_entity.id}}] ?? false;
+            },
             clickMirror() {
-                this.isMirrored = !this.isMirrored;
-                this.$dispatch('mirror', this.isMirrored);
+                this.isMirrored[{{route_entity.id}}] = !this.isMirrored[{{route_entity.id}}];
+                this.$dispatch('mirror', this.isMirrored[{{route_entity.id}}]);
             }
         };
     }
@@ -13,10 +16,10 @@
 <button x-data="initMirrorButton" @click="clickMirror" type="button" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Mirror Route</span>
-    <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="!isMirrored">
+    <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="!isMirrored[{{route_entity.id}}]">
         <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 21 3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5" />
     </svg>
-    <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="isMirrored" x-cloak>
+    <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="isMirrored[{{route_entity.id}}]" x-cloak>
         <path stroke-linecap="round" stroke-linejoin="round" d="M 7.5,21 3,16.5 m 0,0 L 7.5,12 M 3,16.5 h 9.5 M 16.5,3 21,7.5 m 0,0 -4.5,4.5 M 21,7.5 H 7.5" />
         <path stroke-linecap="round" stroke-linejoin="round" d="M 16.775,16.775 21,21 M 16.775,16.775 6.53,6.5299998 m -3.53,-3.53 3.53,3.53" />
     </svg>
