--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -33,7 +33,7 @@
         <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0 dark:text-gray-400">{{ route_entity.grade.value }}</dd>
     </div>
     <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-        <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Route setter</dt>
+        <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Route Setter</dt>
         <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0 dark:text-gray-400">{{ route_entity.routeSetter.userIdentifier }}</dd>
     </div>
     <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
